--- a/cron-plugin/src/main/resources/plugin.yml
+++ b/cron-plugin/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: MC-Cron
-version: 1.9.1
-author: The_TadeSK
+name: ${project.name}
+version: ${project.version}
+authors: [The_TadeSK, Wertík (qwz)]
 main: me.tade.mccron.Cron
 commands:
   timer:
